syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package sum;

service Sum{
	rpc AddTwoNumbers (SumRequest) returns (SumResponse);
}

message SumRequest{
	int32 numberOne = 1;
	int32 numberTwo = 2;
}

message SumResponse{
	int32 sumResult = 1;
}