syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package prime;

service DecomposeNumberService{
	rpc DecomposeNumber (DecomposeNumberRequest) returns (stream DecomposeNumberResponse);
}

message DecomposeNumberRequest{
	int32 initialNumber = 1;
}

message DecomposeNumberResponse{
	int32 decomposedNumber = 1;
}